fix z-indexing a bit

--- a/modules/Magic/M15/MainFrame/frame.css
+++ b/modules/Magic/M15/MainFrame/frame.css
@@ -23,6 +23,8 @@
     flex-direction: column;
     border-radius: 4px;
     padding: 10px 6px 0;
+    position: relative;
+    z-index: 10;
 }
 
 .__id__-header {
@@ -86,4 +88,6 @@
     justify-content: space-between;
     align-items: end;
     padding: 0 10px;
+    position: relative;
+    z-index: 10;
 }
